--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.4'
     compile 'junit:junit:4.12'
     compile 'commons-cli:commons-cli:1.2'
+    compile 'org.codehaus.gpars:gpars:1.2.1'
 }
